--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
     // ★★★ 注意: 実際の音声ファイルへのパスに書き換えてください ★★★
     // ★★★ 著作権フリーまたは利用許諾のある音源を使用してください ★★★
     const sounds = {
-        correct: new Audio('sounds/correct.mp3'),
-        wrong: new Audio('sounds/wrong.mp3'),
-        hitEnemy: new Audio('sounds/hit_enemy.mp3'),
-        hitPlayer: new Audio('sounds/hit_player.mp3'),
-        enemyDefeated: new Audio('sounds/enemy_defeated.mp3'),
-        // victory: new Audio('sounds/victory.mp3'), // 必要なら追加
-        // defeat: new Audio('sounds/defeat.mp3'),   // 必要なら追加
-        // tap: new Audio('sounds/tap.mp3')           // 必要なら追加
+        correct: new Audio('correct.mp3'),
+        wrong: new Audio('wrong.mp3'),
+        hitEnemy: new Audio('hit_enemy.mp3'),
+        hitPlayer: new Audio('hit_player.mp3'),
+        enemyDefeated: new Audio('enemy_defeated.mp3'),
+        // victory: new Audio('victory.mp3'), // 必要なら追加
+        // defeat: new Audio('defeat.mp3'),   // 必要なら追加
+        // tap: new Audio('tap.mp3')           // 必要なら追加
     };
 
     // 音再生ヘルパー (エラーハンドリング付き)
