--- a/index.html
+++ b/index.html
@@ -134,14 +134,46 @@
         return savedStage ? parseInt(savedStage, 10) : 0; // データがなければ0を返す
     }
 
-    // --- 問題生成関数 (変更なし) ---
-    function generateProblems(stage, mode, count) { /* ... 省略 ... */ }
-    // --- 他のヘルパー関数 (変更なし) ---
-    function generateChoices(correct) { /* ... 省略 ... */ } function updateHPBar(elementId, currentHP, maxHP) { /* ... 省略 ... */ } function shakeCharacter(elementId) { /* ... 省略 ... */ } function showFeedback(text, type) { /* ... 省略 ... */ } function updateComboDisplay() { /* ... 省略 ... */ }
+// --- 問題生成関数 ---
+    function generateProblems(stage, mode, count) {
+        console.log(`generateProblems called with: stage=${stage}, mode=${mode}, count=${count}`); // ★追加
+        const generatedProblems = [];
+        // ... (問題生成ロジックはそのまま) ...
+        console.log("Generated problems array:", generatedProblems); // ★追加 (配列の中身を確認)
+        // Fisher-Yatesシャッフル
+        for (let i = generatedProblems.length - 1; i > 0; i--) { const j = Math.floor(Math.random() * (i + 1)); [generatedProblems[i], generatedProblems[j]] = [generatedProblems[j], generatedProblems[i]]; }
+        return generatedProblems;
+    }
 
-    // --- showQuestion関数 (変更なし) ---
-    function showQuestion() { /* ... 省略 ... */ battleInProgress = false; if (currentProblemIndex >= questionsForThisStage || playerHP <= 0 || enemyHP <= 0) { endBattle(); return; } const p = problems[currentProblemIndex]; questionDiv.textContent = p.q; questionStartTime = Date.now(); battleLog.textContent = `Lv${currentStage} (${currentProblemIndex + 1}/${questionsForThisStage}) 問題！`; const choices = generateChoices(p.a); answerChoicesDiv.innerHTML = ""; choices.forEach(choice => { const btn = document.createElement("button"); btn.textContent = choice; btn.className = "choice-btn"; btn.onclick = () => handleAnswer(choice); answerChoicesDiv.appendChild(btn); }); }
-    // --- handleAnswer関数 (変更なし) ---
+    // --- showQuestion関数 ---
+    function showQuestion() {
+        console.log(`showQuestion called. Index: ${currentProblemIndex}, Problems array length: ${problems ? problems.length : 'undefined'}`); // ★追加
+        if (problems && problems.length > currentProblemIndex) { // ★追加: problems配列が存在し、indexが範囲内か確認
+             console.log("Current problem data:", problems[currentProblemIndex]); // ★追加
+        } else {
+             console.error("Problem data is missing or index out of bounds!"); // ★追加: エラーログ
+        }
+
+        battleInProgress = false;
+        // ★変更: 終了条件を questionsForThisStage で判定
+        if (currentProblemIndex >= questionsForThisStage || playerHP <= 0 || enemyHP <= 0) {
+            endBattle();
+            return;
+        }
+        const p = problems[currentProblemIndex]; // ここでエラーの可能性がある
+
+        // ★追加: pが取得できたかチェック (より安全に)
+        if (!p) {
+            console.error("Failed to get problem data 'p' at index", currentProblemIndex);
+            battleLog.textContent = "エラー：問題データの取得に失敗しました。";
+            // endBattle(); // エラー発生時に戦闘を終了させるなど
+            return; // 処理中断
+        }
+
+        questionDiv.textContent = p.q; // pが存在すれば安全にアクセスできる
+        questionStartTime = Date.now();
+        // ... (以下、変更なし) ...
+    }    // --- handleAnswer関数 (変更なし) ---
     function handleAnswer(selectedAnswer) { /* ... 省略 ... */ if (battleInProgress) return; battleInProgress = true; const choiceButtons = answerChoicesDiv.querySelectorAll('.choice-btn'); choiceButtons.forEach(btn => btn.disabled = true); playSound('tap'); const elapsed = (Date.now() - questionStartTime) / 1000; const p = problems[currentProblemIndex]; let feedbackClass = ''; let damageToEnemy = 0; let damageToPlayer = 0; let logMessage = ""; let feedbackText = ""; let feedbackType = ""; let isCritical = false; let criticalTime, perfectTime, greatTime, goodTime, slowPenalty, wrongPenalty; if (gameMode === 'grade1') { criticalTime = 1.5; perfectTime = 2.5; greatTime = 4.0; goodTime = 6.0; slowPenalty = 1; wrongPenalty = 2; } else { criticalTime = 0.8; perfectTime = 1.5; greatTime = 2.5; goodTime = 4.0; slowPenalty = 2; wrongPenalty = 3; } if (selectedAnswer === p.a) { comboCount++; let baseDamage = 0; if (elapsed < criticalTime) { baseDamage = (gameMode === 'grade1' ? 5 : 6); logMessage = `✨Critical Hit!✨ (${elapsed.toFixed(1)}秒) `; feedbackText = "Critical Hit!"; feedbackType = "critical"; isCritical = true; } else if (elapsed < perfectTime) { baseDamage = (gameMode === 'grade1' ? 3 : 4); logMessage = `Perfect! (${elapsed.toFixed(1)}秒) `; feedbackText = "Perfect!"; feedbackType = "perfect"; } else if (elapsed < greatTime) { baseDamage = (gameMode === 'grade1' ? 2 : 2); logMessage = `Great! (${elapsed.toFixed(1)}秒) `; feedbackText = "Great!"; feedbackType = "great"; } else if (elapsed < goodTime) { baseDamage = 1; logMessage = `Good (${elapsed.toFixed(1)}秒) `; feedbackText = "Good"; feedbackType = "good"; } else { damageToPlayer = slowPenalty; logMessage = `Too slow... (${elapsed.toFixed(1)}秒) 自分に${damageToPlayer}ダメージ!`; feedbackText = "Too Slow..."; feedbackType = "slow"; comboCount = 0; } let comboBonus = 0; if (comboCount >= 5) comboBonus = 2; else if (comboCount >= 3) comboBonus = 1; damageToEnemy = baseDamage + comboBonus; if(damageToEnemy > 0) { logMessage += `敵に${damageToEnemy}ダメージ!`; if (comboCount >= 3) logMessage += ` (${comboCount} Combo!)`; feedbackClass = 'feedback-flash'; shakeCharacter('enemyCharacter'); playSound('hitEnemy'); if(isCritical) playSound('criticalHit'); } else if (damageToPlayer > 0) { feedbackClass = 'feedback-damage-player'; shakeCharacter('playerCharacter'); playSound('hitPlayer'); } else { feedbackClass = 'feedback-correct'; } } else { playSound('wrong'); damageToPlayer = wrongPenalty; logMessage = `Wrong! 自分に${damageToPlayer}ダメージ!`; feedbackText = "Wrong!"; feedbackType = "wrong"; feedbackClass = 'feedback-wrong'; comboCount = 0; shakeCharacter('playerCharacter'); playSound('hitPlayer'); } updateComboDisplay(); enemyHP -= damageToEnemy; playerHP -= damageToPlayer; enemyHPText.textContent = Math.max(0, enemyHP); playerHPText.textContent = Math.max(0, playerHP); updateHPBar('enemyHPBar', enemyHP, enemyMaxHP); updateHPBar('playerHPBar', playerHP, playerMaxHP); battleLog.textContent = logMessage; if(feedbackText) showFeedback(feedbackText, feedbackType); if (feedbackClass) { document.body.classList.add(feedbackClass); setTimeout(() => { document.body.classList.remove(feedbackClass); }, 150); } currentProblemIndex++; setTimeout(() => { if (playerHP <= 0 || enemyHP <= 0 || currentProblemIndex >= questionsForThisStage) { endBattle(); } else { showQuestion(); } }, 1000); }
 
     // --- startBattle関数 (変更なし) ---
@@ -236,43 +268,3 @@
   </script>
 </body>
 </html>
-// --- 問題生成関数 ---
-    function generateProblems(stage, mode, count) {
-        console.log(`generateProblems called with: stage=${stage}, mode=${mode}, count=${count}`); // ★追加
-        const generatedProblems = [];
-        // ... (問題生成ロジックはそのまま) ...
-        console.log("Generated problems array:", generatedProblems); // ★追加 (配列の中身を確認)
-        // Fisher-Yatesシャッフル
-        for (let i = generatedProblems.length - 1; i > 0; i--) { const j = Math.floor(Math.random() * (i + 1)); [generatedProblems[i], generatedProblems[j]] = [generatedProblems[j], generatedProblems[i]]; }
-        return generatedProblems;
-    }
-
-    // --- showQuestion関数 ---
-    function showQuestion() {
-        console.log(`showQuestion called. Index: ${currentProblemIndex}, Problems array length: ${problems ? problems.length : 'undefined'}`); // ★追加
-        if (problems && problems.length > currentProblemIndex) { // ★追加: problems配列が存在し、indexが範囲内か確認
-             console.log("Current problem data:", problems[currentProblemIndex]); // ★追加
-        } else {
-             console.error("Problem data is missing or index out of bounds!"); // ★追加: エラーログ
-        }
-
-        battleInProgress = false;
-        // ★変更: 終了条件を questionsForThisStage で判定
-        if (currentProblemIndex >= questionsForThisStage || playerHP <= 0 || enemyHP <= 0) {
-            endBattle();
-            return;
-        }
-        const p = problems[currentProblemIndex]; // ここでエラーの可能性がある
-
-        // ★追加: pが取得できたかチェック (より安全に)
-        if (!p) {
-            console.error("Failed to get problem data 'p' at index", currentProblemIndex);
-            battleLog.textContent = "エラー：問題データの取得に失敗しました。";
-            // endBattle(); // エラー発生時に戦闘を終了させるなど
-            return; // 処理中断
-        }
-
-        questionDiv.textContent = p.q; // pが存在すれば安全にアクセスできる
-        questionStartTime = Date.now();
-        // ... (以下、変更なし) ...
-    }
